# 42-irc

./: .gitignore  CMakeLists.txt  Makefile  kickWords.csv  src.mk  words.csv
.github/workflows/: main.yml  super-linter.yml
bot/: Makefile  src.mk
bot/data/: MOTD.txt
bot/include/: Bot.hpp  NumericReplies.hpp
bot/lib/libftpp/include/: ft.hpp  ft_Exception.hpp  ft_Io.hpp  ft_Set.hpp  ft_String.hpp
bot/lib/libftpp/src/: Exception.cpp  Log.cpp
bot/lib/libftpp/src/String/: findFirstNotOfString.cpp  getFirstWord.cpp  join.cpp  toLowerOrUpper.cpp  vector_string_operators.cpp
bot/lib/libftpp/test/include_test/: ft_Exception.cpp  ft_Io.cpp  ft_Set.cpp
bot/lib/libftpp/test/string/: split.cpp
bot/src/: CSVParser.cpp  Command.cpp  SignalHandler.cpp  main.cpp
bot/src/Bot/: _handleERROR.cpp  _handleINVITE.cpp  _handleJOIN.cpp  _handleKICK.cpp
data/: MOTD.txt  conf
include/: Bot.hpp  CSVParser.hpp  Channel.hpp  Command.hpp  EpollEvent.hpp  ISocket.hpp  ListenSocket.hpp  NumericReplies.hpp  RegisterSocket.hpp  Server.hpp  SignalHandler.hpp  Topic.hpp  User.hpp
lib/libftpp/: .gitignore  Makefile  src.mk  test_src.mk
lib/libftpp/include/: String.hpp  ft.hpp  ft_Exception.hpp  ft_Io.hpp  ft_Log.hpp  ft_Set.hpp  ft_String.hpp  ft_Vector.hpp  test.hpp
lib/libftpp/src/: Exception.cpp  Io.cpp  Log.cpp  String.cpp  ft_Vector.cpp  test.cpp
lib/libftpp/src/String/: findFirstNotOfString.cpp  getFirstWord.cpp  join.cpp  map.cpp  skipChars.cpp  split.cpp  startsOrEndsWith.cpp  toLower.cpp  toLowerOrUpper.cpp  vector_string_operators.cpp
lib/libftpp/test/: main.cpp
lib/libftpp/test/include/: test_string.hpp
lib/libftpp/test/include_test/: ft_Log.cpp  ft_String.cpp
src/: CSVParser.cpp  Channel.cpp  Command.cpp  ListenSocket.cpp  NumericReplies.cpp  RegisterSocket.cpp  Server.cpp  SignalHandler.cpp  Topic.cpp  User.cpp  main.cpp
src/Bot/: Bot.cpp  _handleERROR.cpp  _handleERR_PASSWDMISMATCH.cpp  _handleIGNORE.cpp  _handleJOIN.cpp  _handleNICKERRORS.cpp  _handlePART.cpp  _handlePRIVMSG.cpp  _handleQUIT.cpp  _handleRPL_LIST.cpp  _handleRPL_NAMREPLY.cpp  _handleWELCOME.cpp
src/User/: User.cpp  _handleINVITE.cpp  _handleISON.cpp  _handleJOIN.cpp  _handleKICK.cpp  _handleLIST.cpp  _handleMODE.cpp  _handleNICK.cpp  _handlePART.cpp  _handlePASS.cpp  _handlePING.cpp  _handlePRIVMSG.cpp  _handleQUIT.cpp  _handleTOPIC.cpp  _handleUSER.cpp  _handleWHO.cpp
